@@ -17,6 +17,7 @@ Copyrights
 
 File MASS/R/profiles.R copyright (C) 1996 D. M. Bates and W. N. Venables.
                        port to R by B. D. Ripley copyright (C) 1998
+                       corrections copyright (C) 2000,3,6 B. D. Ripley
 
 Our understanding is that the dataset files MASS/data/*.rda are not copyright.
 
